fix toolbar visibility

--- a/paper_admin/static/paper_admin/src/bem/paper-page/paper-page.scss
+++ b/paper_admin/static/paper_admin/src/bem/paper-page/paper-page.scss
@@ -42,7 +42,7 @@
     }
 
     &:empty,
-    &:not(:has(.card-body > ul > li)) {
+    &:not(:has(.card-body :where(a, button))) {
       display: none;
     }
   }
